# token-compressor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.hermes/plans/: 2026-06-13_token-compressor-mcp.md
src/token_compressor/: __init__.py  dashboard.py  server.py  stats.py  token_counter.py
src/token_compressor/compressors/: __init__.py  compress.py  deduplicate.py  structure.py  truncate.py
tests/: conftest.py  test_compress.py  test_deduplicate.py  test_integration.py  test_server.py  test_stats.py  test_structure.py  test_token_counter.py  test_truncate.py
