[project]
name = "token-compressor"
version = "0.1.0"
description = "MCP server for token-aware text compression"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
token-compressor = "token_compressor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
